unpackaged/main/default/objects/Onboarding_Service_Type__c/Onboarding_Service_Type__c.object-meta.xml
<CustomObject>
    <label>Onboarding Service Type</label>
    <nameField>
        <displayFormat>OBST-{00000000}</displayFormat>
        <label>Onboarding Service Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>