unpackaged/main/default/objects/Onboarding_Service_Type__c/fields/On_Off_Boarding__c.field-meta.xml
<CustomField>
    <fullName>On_Off_Boarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On/Off Boarding</label>
    <referenceTo>On_Off_Boarding__c</referenceTo>
    <relationshipLabel>Onboarding Service Types</relationshipLabel>
    <relationshipName>Onboarding_Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>