unpackaged/main/default/objects/Onboarding_Service_Type__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Onboarding Service Types</relationshipLabel>
    <relationshipName>Onboarding_Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>