unpackaged/main/default/objects/Onboarding_Service_Type__c/fields/Service_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_List__c</fullName>
    <label>Service Type List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Contractor CAN</fullName>
            </value>
            <value>
                <fullName>Admin Contractor USA</fullName>
            </value>
            <value>
                <fullName>Bell FTTP - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Bell Ground Level Box - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Bell Nexxia BMO - Install</fullName>
            </value>
            <value>
                <fullName>Bell Nexxia BMO - Repair</fullName>
            </value>
            <value>
                <fullName>BIR CAN - Admin</fullName>
            </value>
            <value>
                <fullName>BIR CAN - Install</fullName>
            </value>
            <value>
                <fullName>BIR CAN - Repair</fullName>
            </value>
            <value>
                <fullName>BIR USA - Admin</fullName>
            </value>
            <value>
                <fullName>BIR USA - Install</fullName>
            </value>
            <value>
                <fullName>BIR USA - Repair</fullName>
            </value>
            <value>
                <fullName>Business Aerial or Conduit BC</fullName>
            </value>
            <value>
                <fullName>Business Buried BC</fullName>
            </value>
            <value>
                <fullName>Business IR CAN</fullName>
            </value>
            <value>
                <fullName>Business IR USA</fullName>
            </value>
            <value>
                <fullName>CN Rail - Locates CAN</fullName>
            </value>
            <value>
                <fullName>Comcast CAN - Install</fullName>
            </value>
            <value>
                <fullName>Comcast CAN - Repair</fullName>
            </value>
            <value>
                <fullName>Comcast USA - Install</fullName>
            </value>
            <value>
                <fullName>Comcast USA - Repair</fullName>
            </value>
            <value>
                <fullName>Drops</fullName>
            </value>
            <value>
                <fullName>EF&amp;I</fullName>
            </value>
            <value>
                <fullName>EF&amp;I - Installation</fullName>
            </value>
            <value>
                <fullName>Falcon</fullName>
            </value>
            <value>
                <fullName>Falcon - Drops BC</fullName>
            </value>
            <value>
                <fullName>FIN Drops</fullName>
            </value>
            <value>
                <fullName>FIN - Drops</fullName>
            </value>
            <value>
                <fullName>FLM CAN</fullName>
            </value>
            <value>
                <fullName>FLM CAN - Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>